Moved to jupyter subdirectory. Added README

--- a/examples/jupyter/shared_dataset_retrieval.ipynb
+++ b/examples/jupyter/shared_dataset_retrieval.ipynb
@@ -5,11 +5,13 @@
       "source": [
         "# Open Energy Shared Dataset Retrieval example\n",
         "\n",
-        "This Jupyter Notebook uses Open Energy Search to identify a shared dataset that requires authorisation using [Open Energy access control](https://docs.openenergy.org.uk/main/access_control_specification.html) in order to download it.\n",
+        "This Jupyter Notebook uses Open Energy Search to identify a Shared dataset that requires authorisation using [Open Energy access control](https://docs.openenergy.org.uk/main/access_control_specification.html) in order to download it.\n",
         "\n",
-        "You or your organisation need to have registered with an Open Energy account and created your access credentials before using this notebook. This process is detailed in another Jupyter notebook: [Setting up a shared data connection](https://colab.research.google.com/github/icebreakerone/open-energy-python-infrastructure/blob/main/examples/setting_up_a_shared_data_connection.ipynb).\n",
+        "Shared data is one of the [three classes of data](https://icebreakerone.org/open-shared-closed/) (Open, Shared, Closed) in the Open Energy ecosystem, and denotes data that may be used by members of the Open Energy ecosystem subject to conditions set by the data owner.\n",
         "\n",
-        "For an example of using Open Energy Search to find and access Open datasets, see [Open Energy Open Dataset Retrieval Example](https://colab.research.google.com/github/icebreakerone/open-energy-python-infrastructure/blob/main/examples/open_dataset_retrieval.ipynb)"
+        "You or your organisation need to have registered with an Open Energy account and created your access credentials before using this notebook. This process is detailed in another Jupyter notebook: [Setting up a shared data connection](https://colab.research.google.com/github/icebreakerone/open-energy-python-infrastructure/blob/main/examples/jupyter/setting_up_a_shared_data_connection.ipynb).\n",
+        "\n",
+        "For an example of using Open Energy Search to find and access Open datasets, see [Open Energy Open Dataset Retrieval Example](https://colab.research.google.com/github/icebreakerone/open-energy-python-infrastructure/blob/main/examples/jupyter/open_dataset_retrieval.ipynb)"
       ],
       "metadata": {
         "id": "_5Kb8jM6eoxC"
