--- a/examples/jupyter/open_dataset_retrieval.ipynb
+++ b/examples/jupyter/open_dataset_retrieval.ipynb
@@ -1,6 +1,34 @@
 {
   "cells": [
     {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "lSqJfFWhxkgy"
+      },
+      "id": "lSqJfFWhxkgy",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Open Energy Open Dataset Retrieval example\n",
+        "\n",
+        "This Jupyter Notebook uses Open Energy Search to find an Open dataset that is available publicly without access controls. The metadata is used to check the format, then the dataset is downloaded and displayed in a visualisation.\n",
+        "\n",
+        "Open data is one of the [three classes of data](https://icebreakerone.org/open-shared-closed/) (Open, Shared, Closed) in the Open Energy ecosystem. Open data is freely available without restrictions on how it is used.\n",
+        "\n",
+        "Open Energy Search also indexes Shared data - data that may be used by Open Energy members subject to conditions set by the data owner. For an example of using Open Energy Search and [Open Energy access control](https://docs.openenergy.org.uk/main/access_control_specification.html) to retrieve Shared datasets, see [Open Energy Shared Dataset Retrieval Example](https://colab.research.google.com/github/icebreakerone/open-energy-python-infrastructure/blob/main/examples/jupyter/shared_dataset_retrieval.ipynb)"
+      ],
+      "metadata": {
+        "id": "RRaZNGLhuinF"
+      },
+      "id": "RRaZNGLhuinF"
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Install dependencies"
