Refactor, test env

--- a/examples/jupyter/open_dataset_retrieval.ipynb
+++ b/examples/jupyter/open_dataset_retrieval.ipynb
@@ -41,7 +41,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install ib1.openenergy.support pandas geopandas matplotlib rtree"
+        "!pip install icebreakerone.trust pandas geopandas matplotlib rtree"
       ],
       "metadata": {
         "id": "mdbG3vKSMTsD",
