--- a/examples/jupyter/shared_dataset_retrieval.ipynb
+++ b/examples/jupyter/shared_dataset_retrieval.ipynb
@@ -31,7 +31,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install ib1.openenergy.support pandas geopandas matplotlib rtree\n",
+        "!pip install icebreakerone.trust pandas geopandas matplotlib rtree\n",
         "!oe_install_cacerts"
       ],
       "metadata": {
@@ -272,7 +272,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from ib1.openenergy.support import FAPISession\n",
+        "from icebreakerone.trust import FAPISession\n",
         "\n",
         "client = FAPISession(client_id=client_id,\n",
         "                     issuer_url='https://matls-auth.directory.energydata.org.uk',\n",
