--- a/examples/jupyter/setting_up_a_shared_data_connection.ipynb
+++ b/examples/jupyter/setting_up_a_shared_data_connection.ipynb
@@ -53,7 +53,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install ib1.openenergy.support\n",
+        "!pip install icebreakerone.trust\n",
         "!oe_install_cacerts"
       ],
       "metadata": {
@@ -362,7 +362,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from ib1.openenergy.support import FAPISession\n",
+        "from icebreakerone.trust import FAPISession\n",
         "\n",
         "client = FAPISession(client_id=client_id,\n",
         "                     issuer_url='https://matls-auth.directory.energydata.org.uk',\n",
